--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/joy": "^5.0.0-beta.36",
     "axios": "^1.7.2",
+    "html-to-image": "^1.11.11",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
