--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@material-tailwind/react": "^2.1.9",
     "@mui/joy": "^5.0.0-beta.36",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "html-to-image": "^1.11.11",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
