--- a/larest-admin/package.json
+++ b/larest-admin/package.json
@@ -15,10 +15,12 @@
     "@mui/joy": "^5.0.0-beta.47",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.25.1",
+    "react-topbar-progress-indicator": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
