--- a/larest-user/package.json
+++ b/larest-user/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.0",
+    "react-topbar-progress-indicator": "^4.1.1",
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
