--- a/larest-user/.env
+++ b/larest-user/.env
@@ -1,4 +1,4 @@
-# VITE_BASE_URL=http://restaurants.food
-VITE_BASE_URL=https://larest.xyz
+VITE_BASE_URL=http://restaurants.food
+# VITE_BASE_URL=https://larest.xyz
 VITE_MIDTRANS_CLIENT_KEY=SB-Mid-client-R1k8J1RSa9ITMmZG
 VITE_MIDTRANS_SCRIPT_URL=https://app.sandbox.midtrans.com/snap/snap.js
