--- a/larest-admin/.env
+++ b/larest-admin/.env
@@ -1,2 +1,2 @@
-# VITE_BASE_URL=http://restaurants.food
-VITE_BASE_URL=https://larest.xyz
+VITE_BASE_URL=http://reservation-restaurant-apps.test
+# VITE_BASE_URL=https://larest.xyz
