--- a/larest-admin/package.json
+++ b/larest-admin/package.json
@@ -19,6 +19,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-csv-downloader": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-number-format": "^5.4.1",
